# fastapi-oauth-oidc-demo

./: .gitignore  README.md  config.py  env.example  main.py  pyproject.toml
docs/plans/: oauth-fastapi-implementation.md
templates/: base.html  error.html  home.html  profile.html
